
0.3.2
=====


0.3.1
=====

* FEATURE: Add support for Mediawiki redirects (#REDIRECT [[Topic]]).
* FEATURE: Add Special:Move.
* FEATURE: Add jamwiki:linkParam tag, remove jamwiki:encode and
  jamwiki:decode tags.
* FEATURE: For non-image files, [[Image:File]] should display as a download
  link.
* BUG: Apostrophes were not being escaped by the parser.
* BUG: <pre> tags might not be closed by the parser.
* BUG: Use of the edit resolve functionality with a section edit could cause
  the resulting edit to splice together too much text.
* BUG: Upgrade could fail if no user logged in.  Reported by colinbes.
* BUG: Login page displayed the wrong login message.
* BUG: Do not allow user names that vary only by case ("user" vs. "uSer").
* BUG: Fix issue with browsers that encode URL as UTF-8 instead of ISO-8859-1.
* BUG: Remove extra "/" that could sometimes appear in image URLs.
* BUG: Fix topic undeletion when in file persistency mode.
* BUG: Do not display option to change permissions if topic is deleted.
* FEATURE: Uploading a second version of an image should add a record to the
  recent changes.
* FEATURE: Updates made using Special:Translation will now add a record to
  the recent changes page and save a version of the translated file.
* FEATURE: Danish translations from Anders Monrad (g9adm).
* FEATURE: Updated German translations from Axel Kramer (axelclk).
* FEATURE: Updated Hungarian translations from bDaneE.

0.3.0
=====

* FEATURE: Add support for Mediawiki categories.
* FEATURE: Add Special:Categories.
* FEATURE: Add Special:Manage, remove Special:Delete.
* FEATURE: Add support for undeleting a topic.
* FEATURE: Drop jam_image table - unused.
* BUG: Possible null pointer exception in file persistency mode, pointed
  out by User:garem.
* BUG: Image uploads in file persistency mode set wrong path.
* BUG: Fix possible PageInfo corruption.  Pointed out by Scott Crocco.
* BUG: Upgrade to javadiff 1.0.5 to fix several diff issues.